--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Thrillchaser</title>
 </head>
 <body>
-    
+    <script>
+        window.location.href = "./landing_page/thrillchaser.html";
+    </script>
 </body>
 </html>
