--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <script>
         window.location.href = "./landing_page/thrillchaser.html";
     </script>
+    <h1>redirecting...</h1>
 </body>
 </html>
