--- a/landing_page/thrillchaser.html
+++ b/landing_page/thrillchaser.html
@@ -9,6 +9,7 @@
     <meta name="description"
         content="Thrillchaser brings you unforgettable adventures, thrilling destinations, and travel experiences designed for explorers." />
 
+    <link rel="icon" type="image/png" sizes="16px" href="./ThrillChaserLogo.png">
     <link rel="stylesheet" href="scroll-animations.css">
     <link rel="stylesheet" href="style.css">
 
@@ -57,18 +58,28 @@
             <div class="swiper-wrapper">
 
                 <!-- Slide 1 -->
-                <div class="swiper-slide hero-slide" style="background-image: linear-gradient(rgba(155,28,28,0.85), rgba(0,0,0,0.65)),
-               url('https://images.unsplash.com/photo-1507525428034-b723cf961d3e');">
+                <div class="swiper-slide hero-slide" style="background-image: linear-gradient(rgba(62, 191, 255, 0.85), rgba(0,0,0,0.65)),
+               url('./paraglidingbanner.jpg');">
                 </div>
 
                 <!-- Slide 2 -->
-                <div class="swiper-slide hero-slide" style="background-image: linear-gradient(rgba(155,28,28,0.85), rgba(0,0,0,0.65)),
-               url('https://images.unsplash.com/photo-1501785888041-af3ef285b470');">
+                <div class="swiper-slide hero-slide" style="background-image: linear-gradient(rgba(62, 191, 255, 0.85), rgba(0,0,0,0.65)),
+               url('./riverrafting2.jpg');">
                 </div>
 
                 <!-- Slide 3 -->
-                <div class="swiper-slide hero-slide" style="background-image: linear-gradient(rgba(155,28,28,0.85), rgba(0,0,0,0.65)),
-               url('https://images.unsplash.com/photo-1548013146-72479768bada');">
+                <div class="swiper-slide hero-slide" style="background-image: linear-gradient(rgba(62, 191, 255, 0.85), rgba(0,0,0,0.65)),
+               url('./bungeejumpingbanner3.jpg');">
+                </div>
+
+                <!-- Slide 4 -->
+                <div class="swiper-slide hero-slide" style="background-image: linear-gradient(rgba(62, 191, 255, 0.85), rgba(0,0,0,0.65)),
+               url('./feelbanner2.jpg');">
+                </div>
+
+                <!-- Slide 5 -->
+                <div class="swiper-slide hero-slide" style="background-image: linear-gradient(rgba(62, 191, 255, 0.85), rgba(0,0,0,0.65)),
+               url('./jumpbanner4.jpg');">
                 </div>
 
             </div>
@@ -127,7 +138,7 @@
     </section>
 
     <!-- Destinations -->
-    <section class="reveal" style="background:#f1f5f9;">
+    <section class="reveal">
         <div class="container">
             <div class="section-title">
                 <h2>Popular Destinations</h2>
@@ -166,7 +177,7 @@
     </section>
 
     <!-- Popular Adventures -->
-    <section style="background:#ffffff;">
+    <section>
         <div class="container">
             <div class="section-title">
                 <h2>Popular Adventures</h2>
